--- a/sync-web/build.xml
+++ b/sync-web/build.xml
@@ -4,5 +4,5 @@
 <project name="sync-web" basedir="." default="deploy">
 	<property name="import.shared" value="sync-shared" />
 
-	<import file="../build-common-web.xml" />
+	<import file="../../../../tools/sdk/webs/build-common-web.xml" />
 </project>
