LPS-65492 Fix Ant script import

--- a/sync-admin-portlet/build.xml
+++ b/sync-admin-portlet/build.xml
@@ -4,5 +4,5 @@
 <project name="sync-admin-portlet" basedir="." default="deploy">
 	<property name="import.shared" value="sync-shared" />
 
-	<import file="../build-common-portlet.xml" />
+	<import file="../../../../tools/sdk/portlets/build-common-portlet.xml" />
 </project>
