--- a/sync-admin-portlet/build.xml
+++ b/sync-admin-portlet/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE project>
 
-<project name="sync-admin-portlet" basedir="." default="deploy">
+<project basedir="." default="deploy" name="sync-admin-portlet">
 	<import file="../../../../tools/sdk/portlets/build-common-portlet.xml" />
 </project>
