--- a/sync-web/build.xml
+++ b/sync-web/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE project>
 
-<project name="sync-web" basedir="." default="deploy">
+<project basedir="." default="deploy" name="sync-web">
 	<import file="../../../../tools/sdk/webs/build-common-web.xml" />
 </project>
