--- a/sync-test/build.gradle
+++ b/sync-test/build.gradle
@@ -1,7 +1,16 @@
 dependencies {
+	testCompile group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
+	testCompile group: "com.liferay", name: "org.jabsorb", version: "1.3.1.LIFERAY-PATCHED-1"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
+	testCompile group: "com.redhat.qe", name: "json-java", version: "20110202"
+	testCompile group: "easyconf", name: "easyconf", version: "0.9.5"
+	testCompile group: "javax.portlet", name: "portlet-api", version: "2.0"
+	testCompile group: "org.jodd", name: "jodd-bean", version: "3.6.4"
+	testCompile group: "org.jodd", name: "jodd-json", version: "3.6.4"
+	testCompile group: "org.slf4j", name: "slf4j-api", version: "1.7.2"
 	testCompile project(":apps:sync:sync-api")
 	testCompile project(":apps:sync:sync-service")
 
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.8"
-	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 }
