--- a/sync-test/build.gradle
+++ b/sync-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	testCompile group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
+	testCompile group: "com.liferay", name: "com.liferay.petra.string", version: "1.0.0"
 	testCompile group: "com.liferay", name: "org.jabsorb", version: "1.3.1.LIFERAY-PATCHED-1"
 	testCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
 	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
