--- a/sync-service/build.gradle
+++ b/sync-service/build.gradle
@@ -1,3 +1,6 @@
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
 buildService {
 	apiDir = "../sync-api/src/main/java"
 	testDir = "../sync-test/src/testIntegration/java"
@@ -11,6 +14,8 @@ dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.googlecode.jsontoken", name: "jsontoken", version: "1.1"
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.service.tracker.collections", version: "2.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.concurrent", version: "1.1.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.executor", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.io.delta", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "1.0.0"
