--- a/sync-test/build.gradle
+++ b/sync-test/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.2.0"
 	testCompile project(":apps:sync:sync-api")
 	testCompile project(":apps:sync:sync-service")
 
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.10"
-	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 }
